[workspace]
members = ["examples/*"]
resolver = "2"

[package]
name = "haalka"
version = "0.1.0"
edition = "2021"

[dependencies]
async-io = "2.3.1"
bevy = "0.13.2"
bevy-async-ecs = "0.5.0"
bevy_eventlistener = "0.7.0"
bevy_mod_picking = { version = "0.18.0", default-features = false, features = ["backend_bevy_ui"] }
enclose = "1.1.8"
futures-signals = "0.3.33"
futures-util = { version = "0.3.30", features = ["sink"] }  # TODO: need to add sink feature upstream in futures signal ext
futures_signals_ext = { git = "https://github.com/MoonZoon/MoonZoon", rev = "fc73b0d90bf39be72e70fdcab4f319ea5b8e6cfc" }
paste = "1.0.14"
apply = "0.3.0"
async-lock = "3.3.0"
once_cell = "1.19.0"
# TODO: should be behind feature flag, also allow forgoing ui features entirely by disabling defaults
# bevy_cosmic_edit = "0.20.0"
# TODO: remove when 0.21.0 released
# bevy_cosmic_edit = { git = "https://github.com/Dimchikkk/bevy_cosmic_edit", rev = "72146cc5ed6253d548a546f972784ced5a34d31d" }
bevy_cosmic_edit = { path = "../bevy_cosmic_edit" }
